@@ -1,0 +1,61 @@
+#	LablGL and Togl configuration file
+#
+# Please have a look at the config/Makefile in the Objective Caml distribution,
+# or at the labltklink script to get the information needed here
+#
+
+##### Adjust these always
+
+# Uncomment if you have the fast ".opt" compilers
+CAMLC = ocamlc.opt
+CAMLOPT = ocamlopt.opt
+
+# Where to put the lablgl script
+BINDIR = `ocamlc -where`/../bin
+
+# Where to find X headers
+#XINCLUDES = -I/usr/X11R6/include
+# X libs (for broken RTLD_GLOBAL: e.g. FreeBSD 4.0)
+#XLIBS = -L/usr/X11R6/lib -lXext -lXmu -lX11
+
+# Where to find Tcl/Tk headers
+# This must the same version as for LablTk
+TKINCLUDES = -IC:\Progra~1\Tcl\include
+# Tcl/Tk libs (for broken RTLD_GLOBAL: e.g. FreeBSD 4.0)
+TKLIBS = -ltk83 -ltcl83
+
+# Where to find OpenGL/Mesa/Glut headers and libraries
+GLINCLUDES = -DGLU_VERSION_1_3 -DGL_VERSION_1_2
+GLLIBS = -lglu32 -lopengl32
+GLUTLIBS = -lglut32
+# The following libraries may be required (try to add them one at a time)
+#GLLIBS = -lGL -lGLU -lXmu -lXext -lXi -lcipher -lpthread
+
+# How to index a library after installing (ranlib required on MacOSX)
+RANLIB = :
+#RANLIB = ranlib
+
+##### Uncomment these for windows
+TOOLCHAIN = msvc
+XB = .bat
+XE = .exe
+XS = .dll
+MKLIB = ar rcs 
+MKDLL = gcc -mno-cygwin -shared -o
+##### Adjust these if non standard
+
+# The Objective Caml library directory
+# must set it by hand as spaces are not allowed
+#LIBDIR = `ocamlc -where`
+
+# Where to put dlls (if dynamic loading available)
+#DLLDIR = `ocamlc -where`/stublibs
+
+# Where to put LablGL (standard)
+#INSTALLDIR = $(LIBDIR)/lablGL
+
+# Where is Togl (default)
+#TOGLDIR = Togl
+
+# C Compiler options
+#COPTS = -c -O
