@@ -1,5 +1,6 @@
 2003-10-01: [Jacques]
 * split togl, move examples to Togl/examples
+* add mingw support
 
 2003-09-29: [Jacques]
 * reorganized directories and Makefiles
